<resources>
    <string name="app_name">crowdfunding</string>
    <string name="title_activity_after_login">after_login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_bank">Banking</string>
    <string name="menu_sellcrop">Sell Crops</string>

    <string name="menu_cropinfo">Crop Information</string>
    <string name="menu_insurance">Insurance</string>
    <string name="menu_policies">Policies</string>
    <string name="menu_helpforum">Help Forum</string>
    <string name="menu_about">About</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="help_content">We are always available for our users,"\n"
        For any queries related to Kisaan Rakshak "\n" Application,"\n"
    Kindly Contact:
    </string>
    <string name="help_contacts">Number1"\n"
    Number2"\n"
    Number3"\n"
    Number4</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
