<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bank"
            android:icon="@drawable/banking_transaction"
            android:title="@string/menu_bank" />
        <item
            android:id="@+id/nav_sellcrop"
            android:icon="@drawable/home"
            android:title="@string/menu_sellcrop" />

        <item
            android:id="@+id/nav_cropinfo"
            android:icon="@drawable/home"
            android:title="@string/menu_cropinfo" />
        <item
            android:id="@+id/nav_insurance"
            android:icon="@drawable/home"
            android:title="@string/menu_insurance" />
        <item
            android:id="@+id/nav_policies"
            android:icon="@drawable/home"
            android:title="@string/menu_policies" />
        <item
            android:id="@+id/nav_helpforum"
            android:icon="@drawable/home"
            android:title="@string/menu_helpforum" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/settings"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/log_out"
            android:title="@string/menu_logout" />
    </group>
</menu>
